<resources>
    <string name="app_name">Capstone</string>
    <string name="login">Login</string>
    <string name="your_username_and_or_password_is_wrong">Your username and/or password is wrong</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="enter_a_word_describing_your_day">Enter a word describing your day</string>
    <string name="generate">Generate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="archive">Archive</string>
    <string name="publish">Publish</string>
    <string name="friend">Friend</string>
    <string name="add_your_friends_poem_lines_to_your_poem">Add your friends\' poem lines to your poem</string>
    <string name="logoutIcon">Logout</string>
    <string name="my_poems">My Poems</string>
    <string name="noFriendsPrompt">It seems like you have no friends to create poems with. Here\'s some poem lines from us to inspire you!</string>
    <string name="poemConfirmation">Are you done creating your poem?</string>
    <string name="post">Post</string>
    <string name="feed">Feed</string>
    <string name="search">Search</string>
    <string name="add_your_friends_lines_to_your_poem_by_clicking_the_add_button">Add your friends\' lines to your poem by clicking the add button!</string>
    <string name="filter_by_friend">Filter by friend</string>
    <string name="check">Check</string>
</resources>